@@ -67,7 +67,7 @@ public class GenericAccessLogElement implements AccessLogElement {
 	protected AccessLogElement createElementInstance(){
 		
 		try {
-			return this.getClass().newInstance();
+			return this.getClass().getDeclaredConstructor().newInstance();
 		} catch (final Exception ex) {
 			
 		} 
